--- a/html/註冊畫面.html
+++ b/html/註冊畫面.html
@@ -5,7 +5,7 @@
 
 <form action="/action_page.php">
   
-  <p style="font-size:50px;">Register</p>
+  <h1>Register</h1>
   
   <label for="Name">Name:</label><br>
   <input type="text" id="Name" name="Name"><br><br>
